--- a/_locales/zh/su03t-strings.json
+++ b/_locales/zh/su03t-strings.json
@@ -1,12 +1,12 @@
 {
-    "su03t|block": "SU-03T語音辨識",
-    "su03t.floatCommand.command06|block":"整數",
-    "su03t.floatCommand.command07|block":"小數",
-    "su03t.su03tSetSerial|block": "SU-03T初始化|B6連接到 %pinTX|B7連接到 %pinRX",
-    "su03t.su03tEvent|block": "SU-03T當聽到語音指令時",
-    "su03t.su03tCommandList|block": "聽到語音指令%myCommand？",
-    "su03t.su03tSpeakSomething|block": "SU-03T傳送數字到晶片並唸出%myCommand|數值(整數)%myNum",
-    "su03t.su03tSpeakFloat|block": "SU-03T傳送數字到晶片並唸出%myCommand|數值%myNum",
-    "su03t.su03tSystemCommand|block": "SU-03T執行系統指令%myCommand",
-    "su03t.su03tPreCommand|block": "SU-03T晶片唸出%myCommand"
+    "su03t|block": "SU-03T语音识别",
+    "su03t.floatCommand.command06|block":"整数",
+    "su03t.floatCommand.command07|block":"小数",
+    "su03t.su03tSetSerial|block": "SU-03T初始化|B6连接到 %pinTX|B7连接到 %pinRX",
+    "su03t.su03tEvent|block": "SU-03T当听到语音指令时",
+    "su03t.su03tCommandList|block": "听到语音指令%myCommand？",
+    "su03t.su03tSpeakSomething|block": "SU-03T传送数字到晶片并念出%myCommand|数值(整数)%myNum",
+    "su03t.su03tSpeakFloat|block": "SU-03T传送数字到晶片并念出%myCommand|数值%myNum",
+    "su03t.su03tSystemCommand|block": "SU-03T执行系統指令%myCommand",
+    "su03t.su03tPreCommand|block": "SU-03T芯片念出%myCommand"
 }
